--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HackBotAI MX – Predicciones 1xBet</title>
+  <title>HackBotAI Peru – Predicciones 1xBet</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     .console-box {
@@ -41,7 +41,7 @@
 
   <div id="mainContent" class="hidden-screen">
     <header class="w-full bg-gray-800 p-4 flex justify-between items-center border-b border-green-500">
-      <h1 class="text-xl font-bold text-green-400">HackBotAI México 🇲🇽</h1>
+      <h1 class="text-xl font-bold text-green-400">HackBotAI Peru 🇲🇽</h1>
       <nav class="space-x-4 hidden md:block">
         <a href="#how" class="hover:text-green-400">Funcionamiento</a>
         <a href="#games" class="hover:text-green-400">Juegos</a>
@@ -55,7 +55,7 @@
       </h2>
 
       <div class="mb-4 text-lg font-semibold text-yellow-300">
-        👋 ¡Bienvenido al canal oficial de <span class="text-green-400">Alejandro Valencia</span> para México!
+        👋 ¡Bienvenido al canal oficial de <span class="text-green-400">Jorge </span> para México!
       </div>
 
       <p class="max-w-xl mb-8 text-gray-300">
@@ -70,7 +70,7 @@
 
       <div id="connectionSuccess" class="hidden text-green-400 font-bold mt-6">
         <p>✅ ID: <span id="accountIdDisplay">1234567890</span> conectado!</p>
-        <p>Status: Servidor México Activo | Algoritmo al 100%</p>
+        <p>Status: Servidor Peru Activo | Algoritmo al 100%</p>
         <button id="getSignalButton" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-xl text-lg transition mt-4 animate-bounce">
           OBTENER SEÑAL AHORA
         </button>
@@ -81,7 +81,7 @@
         <p class="mb-4">Para activar el HackBotAI, tu cuenta debe estar activa. Realiza un depósito mínimo de <strong>$100 MXN o más</strong> para validar tu ID y desbloquear las señales VIP.</p>
 
         <a href="https://reffpa.com/L?tag=d_2911869m_14203c_&site=2911869&ad=14203" target="_blank" id="depositButton" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-6 rounded-lg transition">
-          DEPOSITAR EN 1XBET MÉXICO
+          DEPOSITAR EN 1XBET PERU
         </a>
 
         <div class="mt-6 bg-black text-white p-4 rounded-lg font-bold text-center">
@@ -94,12 +94,12 @@
     <section class="bg-gray-800 py-12 px-6 text-center">
       <h3 class="text-2xl font-bold text-green-400 mb-6">Ganadores de hoy en México 🇲🇽</h3>
       <div class="grid md:grid-cols-2 gap-4 text-left max-w-4xl mx-auto text-sm text-green-300 font-mono">
-        <p>👤 ID: 4518**** – $12,300 MXN</p>
-        <p>👤 ID: 9912**** – $8,500 MXN</p>
-        <p>👤 ID: 3099**** – $15,120 MXN</p>
-        <p>👤 ID: 1187**** – $6,400 MXN</p>
-        <p>👤 ID: 4412**** – $22,850 MXN</p>
-        <p>👤 ID: 8283**** – $9,200 MXN</p>
+        <p>👤 ID: 4518**** – 750 SOL</p>
+        <p>👤 ID: 9912**** – 1050 SOL</p>
+        <p>👤 ID: 3099**** – 2230 SOL</p>
+        <p>👤 ID: 1187**** – 5890 SOL</p>
+        <p>👤 ID: 4412**** – 880 SOL</p>
+        <p>👤 ID: 8283**** – 450 SOL</p>
       </div>
     </section>
 
@@ -122,7 +122,7 @@
     </section>
 
     <footer class="text-center text-gray-500 text-sm py-8 bg-black">
-      <p>© 2026 HackBotAI México. Todos los derechos reservados.</p>
+      <p>© 2026 HackBotAI Peru. Todos los derechos reservados.</p>
       <p class="text-xs mt-2">Juega con responsabilidad. Solo para mayores de 18 años.</p>
     </footer>
   </div>
