Update deposit link and winner amounts in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2 class="text-xl font-bold mb-2">⚠️ SALDO INSUFICIENTE</h2>
         <p class="mb-4">Para activar el HackBotAI, tu cuenta debe estar activa. Realiza un depósito mínimo de <strong>30 SOL o más</strong> para validar tu ID y desbloquear las señales VIP.</p>
 
-        <a href="https://reffpa.com/L?tag=d_2911869m_14203c_&site=2911869&ad=14203" target="_blank" id="depositButton" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-6 rounded-lg transition">
+        <a href="https://reffpa.com/L?tag=d_5048864m_97c__[]general[]_d173877_l240359_adaptive_banner&site=5048864&ad=97&r=registration" target="_blank" id="depositButton" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-6 rounded-lg transition">
           DEPOSITAR EN 1XBET Perú
         </a>
 
@@ -96,8 +96,8 @@
       <div class="grid md:grid-cols-2 gap-4 text-left max-w-4xl mx-auto text-sm text-green-300 font-mono">
         <p>👤 ID: 4518**** – 750 SOL</p>
         <p>👤 ID: 9912**** – 1050 SOL</p>
-        <p>👤 ID: 3099**** – 2230 SOL</p>
-        <p>👤 ID: 1187**** – 5890 SOL</p>
+        <p>👤 ID: 3099**** – 290 SOL</p>
+        <p>👤 ID: 1187**** – 3045 SOL</p>
         <p>👤 ID: 4412**** – 880 SOL</p>
         <p>👤 ID: 8283**** – 450 SOL</p>
       </div>
