--- a/1xBetPredictBot.html
+++ b/1xBetPredictBot.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Predicciones de Juegos con IA - Colombia</title>
+  <title>Predicciones de Juegos con IA - Perú </title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     .console-box {
@@ -51,7 +51,7 @@
   <div id="mainContent">
     <header class="w-full bg-gray-800 p-4 flex justify-between items-center">
       <h1 class="text-xl font-bold text-green-400">
-        Predicciones con IA 1xBet Colombia
+        Predicciones con IA 1xBet Perú
       </h1>
       <nav class="space-x-4">
         <a href="#how" class="hover:text-green-400">Cómo Funciona</a>
@@ -66,7 +66,7 @@
       </h2>
 
       <p class="max-w-xl mb-8 text-gray-300">
-        Únete a miles de jugadores en Colombia usando nuestra IA para ganar en los juegos más populares.  
+        Únete a miles de jugadores en Perú usando nuestra IA para ganar en los juegos más populares.  
         Precisión del 96%, predicciones en tiempo real y retiros rápidos.
 
         El bot no enviará más de 6 señales correctas; esta es la versión demo del sitio.  
@@ -103,7 +103,7 @@
           </button>
         </div>
         <p class="mt-4 text-gray-400 text-sm">
-          Predicciones Penalty estarán disponibles pronto para jugadores en Colombia.
+          Predicciones Penalty estarán disponibles pronto para jugadores en Perú
         </p>
       </div>
     </section>
@@ -114,7 +114,7 @@
         <div class="grid md:grid-cols-3 gap-8">
           <div class="bg-gray-700 p-6 rounded-lg">
             <h3 class="text-xl font-semibold mb-3 text-green-400">1. Ingresa tu ID</h3>
-            <p>Ingresa tu ID de cuenta 1xBet Colombia para comenzar.</p>
+            <p>Ingresa tu ID de cuenta 1xBet Perú para comenzar.</p>
           </div>
 
           <div class="bg-gray-700 p-6 rounded-lg">
@@ -131,7 +131,7 @@
     </section>
 
     <footer class="text-center text-gray-500 text-sm py-6">
-      © 2025 Predicciones IA Colombia. No afiliado con 1xBet. Juega con responsabilidad.
+      © 2026 Predicciones IA Perú No afiliado con 1xBet. Juega con responsabilidad.
     </footer>
   </div>
 
